Checking in now for easier comparison

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -15,7 +15,7 @@ collections:
       - { name: date, label: Date, widget: date }
       - { name: title, label: Title }
       - { name: description, label: Description }
-      - { name: "topimage", label: "Featured Image", widget: "image", default: "/assets/financial-peace.jpg" }
+      - { name: "topimage", label: "Featured Image", widget: "image", required: false, default: "/assets/financial-peace.jpg" }
       - { name: body, label: Body, widget: markdown }
   - name: lessons
     label: Lessons
@@ -26,6 +26,6 @@ collections:
       - { name: date, label: Date, widget: date }
       - { name: title, label: Title }
       - { name: description, label: Description }
-      - { name: "topimage", label: "Featured Image", widget: "image", default: "/assets/financial-peace.jpg" }
-      - { name: lessonnumber, label: "Lesson Number", widget: string }
+      - { name: "topimage", label: "Featured Image", widget: "image", required: false, default: "/assets/financial-peace.jpg" }
+      - { name: lessonnumber, label: "Lesson Number", widget: number }
       - { name: body, label: Body, widget: markdown }
